update suc khoe dinh duong

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -283,8 +283,187 @@
         </section>
 
         <section id="suckhoe" class="tab-content">
-            <h3>Sức khỏe</h3>
-            <p>Báo cáo sức khỏe định kỳ...</p>
+            <div class="khung-chinh">
+                <!-- Cột trái -->
+                <div class="cot-trai">
+                    <h2>Sức khỏe & Dinh dưỡng</h2>
+                    <p class="mota">Theo dõi tình hình sức khỏe và chế độ ăn uống của con</p>
+                    <div class="lich">
+                    <h4>Chọn ngày</h4>
+                    <div class="lich-header">
+                        <button>&lt;</button>
+                        <span>November 2025</span>
+                        <button>&gt;</button>
+                    </div>
+                    <div class="hang-tuan">
+                        <span>Su</span><span>Mo</span><span>Tu</span><span>We</span><span>Th</span><span>Fr</span><span>Sa</span>
+                    </div>
+                    <div class="ngay-list">
+                        <span>26</span><span>27</span><span>28</span><span>29</span><span>30</span><span class="chon">1</span><span>2</span>
+                        <span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span>
+                        <span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span>
+                        <span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span>
+                        <span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
+                    </div>
+                    </div>
+                </div>
+
+                <!-- Cột phải -->
+                <div class="cot-phai">
+                    <div class="ngay-list-wrapper">
+                    <!-- Ngày 1 -->
+                    <div class="ngay-khoi khoe-manh">
+                        <div class="tieu-de-ngay">
+                        <span>Thứ Hai, 23 tháng 12, 2024</span>
+                        <span class="trang-thai xanh">Khỏe mạnh</span>
+                        </div>
+                        <div class="muc">
+                        <h4>Tình hình sức khỏe</h4>
+                        <div class="thongtin">
+                            <div class="nhietdo">
+                            <p>Nhiệt độ</p>
+                            <span>36.5°C</span>
+                            </div>
+                            <div class="ghichu">
+                            <p>Ghi chú</p>
+                            <span>Khỏe mạnh, tinh thần tốt</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="muc">
+                        <h4>Chế độ ăn uống</h4>
+                        <div class="bua-an">
+                            <div class="bua">
+                            <div class="icon">🍎</div>
+                            <p>Bữa sáng</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍽️</div>
+                            <p>Bữa trưa</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍇</div>
+                            <p>Bữa phụ</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon nuocuong"></div>
+                            <p>Nước uống</p>
+                            <span class="lit">1.2L</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="ghichu-an">
+                        <p>Ghi chú dinh dưỡng</p>
+                        <span>Ăn uống đầy đủ, không kén ăn</span>
+                        </div>
+                    </div>
+
+                    <!-- Ngày 2 -->
+                    <div class="ngay-khoi can-chu-y">
+                        <div class="tieu-de-ngay">
+                        <span>Chủ Nhật, 22 tháng 12, 2024</span>
+                        <span class="trang-thai vang">Cần chú ý</span>
+                        </div>
+                        <div class="muc">
+                        <h4>Tình hình sức khỏe</h4>
+                        <div class="thongtin">
+                            <div class="nhietdo">
+                            <p>Nhiệt độ</p>
+                            <span>37.1°C</span>
+                            </div>
+                            <div class="ghichu">
+                            <p>Ghi chú</p>
+                            <span>Hơi mệt, cần theo dõi</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="muc">
+                        <h4>Chế độ ăn uống</h4>
+                        <div class="bua-an">
+                            <div class="bua">
+                            <div class="icon">🍎</div>
+                            <p>Bữa sáng</p>
+                            <span class="motphan">Một phần</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍽️</div>
+                            <p>Bữa trưa</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍇</div>
+                            <p>Bữa phụ</p>
+                            <span class="thieu">Không ăn</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon nuocuong"></div>
+                            <p>Nước uống</p>
+                            <span class="lit">0.8L</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="ghichu-an">
+                        <p>Ghi chú dinh dưỡng</p>
+                        <span>Ăn ít vào buổi sáng, cần khuyến khích</span>
+                        </div>
+                    </div>
+
+                    <!-- Ngày 3 -->
+                    <div class="ngay-khoi khoe-manh">
+                        <div class="tieu-de-ngay">
+                        <span>Thứ Bảy, 21 tháng 12, 2024</span>
+                        <span class="trang-thai xanh">Khỏe mạnh</span>
+                        </div>
+                        <div class="muc">
+                        <h4>Tình hình sức khỏe</h4>
+                        <div class="thongtin">
+                            <div class="nhietdo">
+                            <p>Nhiệt độ</p>
+                            <span>36.3°C</span>
+                            </div>
+                            <div class="ghichu">
+                            <p>Ghi chú</p>
+                            <span>Khỏe mạnh, năng động</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="muc">
+                        <h4>Chế độ ăn uống</h4>
+                        <div class="bua-an">
+                            <div class="bua">
+                            <div class="icon">🍎</div>
+                            <p>Bữa sáng</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍽️</div>
+                            <p>Bữa trưa</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon">🍇</div>
+                            <p>Bữa phụ</p>
+                            <span class="daydu">Đầy đủ</span>
+                            </div>
+                            <div class="bua">
+                            <div class="icon nuocuong"></div>
+                            <p>Nước uống</p>
+                            <span class="lit">1.5L</span>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="ghichu-an">
+                        <p>Ghi chú dinh dưỡng</p>
+                        <span>Ăn uống tốt, uống đủ nước</span>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                </div>
+
         </section>
 
         <section id="hoctap" class="tab-content">
