Bổ sung chức năng thêm ghi chú sức khỏe và dinh dưỡng, cải thiện giao diện và xử lý sự kiện cho các phần liên quan đến sức khỏe.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -313,32 +313,67 @@
                 <tr>
                     <td>
                         <span id="HSSK">Nguyễn Văn A</span><br>
-                         <span id="MaHSSK" style="color: gray;">HS001</span>
+                        <span id="MaHSSK" style="color: gray;">HS001</span>
                     </td>
                     <td>
-                        <span id="TinhtrangSK" style="background-color:#D8F6E0 ;color: green;border-radius: 7px;padding: 3px 3px;">Khỏe mạnh</span>
+                        <span class="TinhtrangSK" >Khỏe mạnh</span>
                     </td>
                     <td>
                         <span id="GhichuSK">Ăn tốt, khỏe mạnh</span>
                     </td>
                     <td>
-                        <span id="CheDoAnSK" style="background-color:#D8F6E0 ;color: green;border-radius: 7px;padding: 3px 3px;">Bình thường</span>
+                        <span class="CheDoAnSK" >Bình thường</span>
                     </td>
                     <td>
                         <span id="DinhDuongSK">Đủ chất sơ, đạm, sắt và protein</span>
                     </td>
                     <td>
-                        <span id="BuaAnSK" style="background-color:black;color: white;border-radius: 7px;padding: 3px 3px;">Đã Xong</span>
+                        <span class="BuaAnSK">Đã Xong</span>
                     </td>
                     <td>
-                        <button class="btnGHICHUDD" ><i class="fa-solid fa-edit"></i></button>
+                        <button class="btnGHICHUSK" ><i class="fa-solid fa-edit"></i></button>
                     </td>
                 </tr>
                 
             </table>
         </div>
+
+        <div id="CuaSoThemGhiChuSK">
+            <button id="btbThoatcsoGCSK" style="float: right;border: none;background-color:transparent;cursor: pointer;" ><i class="fa-solid fa-xmark"></i></button>
+            <h3 style="margin-bottom: 2px;">Thêm ghi chú sức khỏe & dinh dưỡng</h3>
+            <span style="color: gray;">Ghi chú tình hình sức khỏe và chế độ ăn của học sinh</span>
+
+            <div style="justify-content: space-between;"> <span>Học sinh</span> 
+                <select id="chonHocSinhGhiChuSK">
+                    <option value="Nguyễn Văn A">Nguyễn Văn A</option>
+                    <option value="Nguyễn Văn B">Nguyễn Văn B </option>
+                    <option value="Nguyễn Văn C">Nguyễn Văn C</option>
+                </select> 
+            </div>
+
+            <div style="display: flex;;">
+                <div><input type="radio" checked name="suckhoe" value="Khỏe mạnh" id="rdbtnKhoeManh"><span>Khỏe mạnh</span></div>
+                 <div><input type="radio" name="suckhoe"  value="Ốm" id="rdbtnOm"><span>Ốm</span></div></div>
+
+            <div style="display: flex;;">
+                <div><input type="radio" name="suckhoe" value="Chấn Thương" id="rdbtnChanThuong"><span>Chấn Thương</span> </div>
+                <div><input type="radio" name="suckhoe" value="Đang dùng thuốc" id="rdbtnDangDungThuoc"><span>Đang dùng thuốc</span></div></div>
+
+            <div><span>Sức khỏe</span> <textarea style="resize: none;  " id="GhichuveTTSK" placeholder="Ghi chú về tình trạng sức khỏe"></textarea></div>
+
+            <div  style="display: flex;;"><div><input checked type="radio" value="Bình thường" name="BuaAN" id="rdbtnBinhThuong"><span>Bình thường</span> </div>
+                <div><input type="radio" name="BuaAN" value="Dị Ứng" id="rdbtnDiUng"><span>Dị Ứng</span></div>
+                <div><input type="radio" name="BuaAN" value="Chế độ ăn đặc biệt" id="rdbtnCĐB"><span>Chế độ ăn đặc biệt</span></div>
+            </div>
+
+            <div><span>Dinh dưỡng</span><textarea style="resize: none;  " id="GhichuveĐSK" placeholder="Ghi chú về chế độ ăn ,dị ứng"></textarea></div>
+
+            <div><span>Bữa ăn</span> <input type="checkbox" id="ckbuaanSK"><span>Đã hoàn thành bữa ăn</span></div>
+            <button id="btncuasoTGCSK"><i class="fa-solid fa-floppy-disk"></i>Thêm Ghi Chú</button>
+
+        </div>
     </div>
-    </div>
+    
 
     <div id="DiemSo" style="display: none;">
         <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/open-book.png" alt=""><span></span>Quản lý điểm số</h3>
