update co ban suc khoe

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -462,8 +462,31 @@
                     </div>
                     </div>
                 </div>
+               
                 </div>
+                <div class="tomtat-tuan">
+                    <h3>Tóm tắt tuần này</h3>
+                    <p class="phu-de">Thống kê sức khỏe và dinh dưỡng 7 ngày gần đây</p>
 
+                    <div class="tomtat-box">
+                        <div class="muc-tomtat">
+                        <span class="giatri xanhla">5/7</span>
+                        <p>Ngày khỏe mạnh</p>
+                        </div>
+                        <div class="muc-tomtat">
+                        <span class="giatri xanhduong">85%</span>
+                        <p>Hoàn thành bữa ăn</p>
+                        </div>
+                        <div class="muc-tomtat">
+                        <span class="giatri tim">1.2L</span>
+                        <p>Trung bình nước/ngày</p>
+                        </div>
+                        <div class="muc-tomtat">
+                        <span class="giatri cam">36.4°C</span>
+                        <p>Nhiệt độ trung bình</p>
+                        </div>
+                    </div>
+                    </div>
         </section>
 
         <section id="hoctap" class="tab-content">
